Bug 1673906 - Generate a WR epoch for RecvUpdateResources. r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D95103